--- a/source-css/antisonicmotes.css
+++ b/source-css/antisonicmotes.css
@@ -79,7 +79,7 @@ a[href="/discordsterror"]{        background-position: -500px    0px; width: 165
 
 /*Sheet 2*/
 
-a[href|="/rariball"],a[href|="/rdfillies"],a[href|="/sblook"],a[href|="/sweetiedash"],a[href|="/woonabelle"],a[href="/timidashie"]{
+a[href|="/rariball"],a[href|="/rdfillies"],a[href|="/sblook"],a[href|="/sweetiedash"],a[href|="/woonabelle"],a[href="/timidashie"],a[href="/ssanime"]{
 
    display: block;
    clear: none;
@@ -91,7 +91,8 @@ a[href="/rdfillies"]{        background-position:    -100px      0px; width: 200
 a[href="/sblook"]{           background-position:    0px      -200px; width: 200px; height: 190px}
 a[href="/sweetiedash"]{      background-position:    -200px   -200px; width: 200px; height: 165px}
 a[href="/woonabelle"]{       background-position:    -300px   0px; width: 200px; height: 200px}
-a[href="/timidashie"]{        background-position:    0px   -400px; width: 180px; height: 200px}
+a[href="/timidashie"]{       background-position:    0px   -400px; width: 180px; height: 200px}
+a[href="/ssanime"]{          background-position:    0px   -600px; width: 100px; height: 200px}
 
 /**********************************************************************************************/
 /* Colorful names! */
