--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -426,37 +426,37 @@ background-position: -38px 0;
 
 /* CSS image indicators! */
 
-ul#image-preview-list li:nth-child(11):after {
+ul.image-preview-list li:nth-child(11):after {
 content: "10th image";
 color: green;
 padding-left: 5px;
 }
 
-ul#image-preview-list li:nth-child(21):after {
+ul.image-preview-list li:nth-child(21):after {
 content: "20th image";
 color: green;
 padding-left: 5px;
 }
 
-ul#image-preview-list li:nth-child(31):after {
+ul.image-preview-list li:nth-child(31):after {
 content: "30th image";
 color: yellow;
 padding-left: 5px;
 }
 
-ul#image-preview-list li:nth-child(41):after {
+ul.image-preview-list li:nth-child(41):after {
 content: "40th image";
 color: orangered;
 padding-left: 5px;
 }
 
-ul#image-preview-list li:nth-child(46):after {
+ul.image-preview-list li:nth-child(46):after {
 content: "45th image";
 color: red;
 padding-left: 5px;
 }
 
-ul#image-preview-list li:nth-child(51):after {
+ul.image-preview-list li:nth-child(51):after {
 content: "50th image";
 color: red;
 padding-left: 5px;
@@ -497,7 +497,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -513,7 +513,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -606,7 +606,7 @@ a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fsw
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /* Misfits n */
-a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"]
+a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"], a[href|="/nospoilers"], a[href|="/saltydash"], a[href|="/woonashrug"], a[href|="/chickenface"]
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /*
@@ -662,11 +662,11 @@ a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocoha
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
-a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"]
+a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"], a[href|="/ponk"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
-a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"], a[href|="/crazyrainbowicorn"], a[href|="/ajangry"]
+a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"], a[href|="/crazyrainbowicorn"], a[href|="/ajangry"], a[href|="/nerdfleetfoot"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
@@ -690,15 +690,15 @@ a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abr
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"], a[href|="/rarityspeechless"]:hover
+a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"], a[href|="/rarityspeechless"]:hover, a[href|="/crazyfs"], a[href|="/fstwicrazy"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"], a[href|="/sadicecreamtwilight"], a[href|="/fleetfootohsnap"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"], a[href|="/sadicecreamtwilight"], a[href|="/fleetfootohsnap"], a[href|="/flutterconfused"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/abswear"], a[href|="/shopdotmov"]
+a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/abswear"], a[href|="/shopdotmov"], a[href|="/changelingmad"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -1360,4 +1360,8 @@ a[href|="/rdthathurt"] {width:150px;height:121px;background-position: -90px -250
 a[href|="/sslove"] {width:150px;height:124px;background-position: -240px -300px;}
 a[href|="/squareroot"] {width:150px;height:88px;background-position: -390px -300px;}
 a[href|="/flirttwi"], a[href|="/flirtwi"] {width:62px;height:100px;background-position: 0 -300px;}
-a[href|="/ajrdhoofbump"] {width:126px;height:100px;background-position: -540px -305px;
+a[href|="/ajrdhoofbump"] {width:126px;height:100px;background-position: -540px -305px;}
+a[href|="/nospoilers"] {width:100px;height:86px;background-position: -372px -388px;}
+a[href|="/saltydash"] {width:102px;height:149px;background-position: -666px -305px;}
+a[href|="/woonashrug"] {width:86px;height:100px;background-position: -472px -388px;}
+a[href|="/chickenface"] {width:71px;height:100px;background-position: -174px -371px;}
