--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -562,6 +562,7 @@ a[href|="/cheesetrot"] {
 .flair-raindrops { background-position: 0 -2900%; }
 .flair-fleetfoot { background-position: -100% -2900%; }
 .flair-beautybrass { background-position: -200% -2900%; }
+.flair-zephyrbreeze { background-position: -300% -2900%; }
 
 START-PONYSCRIPT-IGNORE { color: red; }
 
@@ -571,7 +572,7 @@ a[href|="/mirrorportal"] {
   float:left;
   width: 59px;
   height: 112px;
-  background-position: 0 0;
+  cursor: default;
   background-image: url(%%portal%%) !important;
 }
 
@@ -591,4 +592,5 @@ a[href^="/domain"] {
   transform: unset !important;
 }
 
+a[href|="/mirrorportal"]{background-position:0 0}
 END-PONYSCRIPT-IGNORE { color: red; }
