--- a/source-css/coloratura.css
+++ b/source-css/coloratura.css
@@ -533,6 +533,9 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-harshwhinny
 {background-position:-300% -2800%}
 
+.flair-zephyrbreeze
+{background-position:-300% -2900%}
+
 /*---------------- END COPY ----------------*/
 
 a[href|="/countesssing"], a[href|="/raramagic"], a[href|="/thecountess"], a[href|="/happyrara"], a[href|="/rarasing"], a[href|="/sadrara"], a[href|="/svengallop"], a[href|="/fillyrarasing"], a[href|="/rarashock"], a[href|="/countempt"], a[href|="/countesslook"] {
@@ -598,7 +601,7 @@ a[href|="/mirrorportal"] {
   float:left;
   width: 59px;
   height: 112px;
-  background-position: 0 0;
+  cursor: default;
   background-image: url(%%portal%%) !important;
 }
 
@@ -618,4 +621,5 @@ a[href^="/domain"] {
   transform: unset !important;
 }
 
+a[href|="/mirrorportal"]{background-position:0 0}
 END-PONYSCRIPT-IGNORE { color: red; }
